--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,6 @@
 /*inicio de partial global*/
 body {
-  font-family: "Special Elite";
+  font-family: "Courier Prime";
   background-color: #14141c;
   color: #e3d7cb;
 }
@@ -16,6 +16,7 @@ p {
 
 a {
   text-decoration: none;
+  font-family: "Special Elite";
 }
 
 /*fin de partial global*/
@@ -58,6 +59,12 @@ header nav ul li a {
   height: 5vw;
 }
 
+@media only screen and (max-width: 600px) {
+  #portada {
+    width: 18vw;
+    height: 18vw;
+  }
+}
 .actionBtn5 {
   overflow: hidden;
   position: relative;
